--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 title: Guo-qing Jiang # your name (or website title) here
 logo: "figures/avatar.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am currently a Assistant Research Scientist at Chinese Meteorology Bureau. Before that, I was a [KUAI](https://www.kuaishou.com) Tec. AI Algorithm Engineer working on understanding deep learning, face locallization, etc...
+  I am currently a Assistant Research Scientist at Chinese Meteorology Bureau. Before that,
+  I was a <a href="https://www.kuaishou.com/">KUAI</a> Tec. AI Algorithm Engineer working on understanding deep learning,
+  face locallization, etc...
   <br><br>
 
-  <a href="https://www.linkedin.com/in/guoqing-jiang-780a5bb2/">View My LinkedIn Profile</a>
-  <a href="https://scholar.google.com/citations?user=kCBHjI4AAAAJ&hl=en">View My Google Scholar Profile</a>
-  <a href="https://www.researchgate.net/profile/Guo_Qing_Jiang">View My Research Gate Profile</a>
+  View My <a href="https://www.linkedin.com/in/guoqing-jiang-780a5bb2/"> LinkedIn </a> /
+  <a href="https://scholar.google.com/citations?user=kCBHjI4AAAAJ&hl=en"> Google Scholar </a> /
+  <a href="https://www.researchgate.net/profile/Guo_Qing_Jiang"> Research Gate </a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
