--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,23 @@ description: > # your text below (remove <br> elements if you don't need line br
   I was a <a href="https://www.kuaishou.com/">KUAI</a> Tec. AI Algorithm Engineer working on understanding deep learning,
   face locallization, etc...
   <br><br>
+  I received my Ph.D degree of "Climate Sciences" at School of <a href="http://www.phy.pku.edu.cn/"> Physics </a> of
+  <a href="https://www.pku.edu.cn/"> Peking University </a> supervised by
+  <a href="http://www.atmos.pku.edu.cn/en/Faculty/Fulltimefaculty/64750.htm"> Prof. Jun Wei </a>. During my Ph.D career,
+  I visited <a href="https://eapsweb.mit.edu"> EAPS </a> of <a href="http://www.mit.edu/"> MIT </a> for one year,
+  hosted by <a href="http://web.mit.edu/rizzoli/Public/"> Prof. Paola Malanotte-Rizzoli </a>.
+  <br><br>
+  My research spans hurricane, climate, physical ocean and AI. I focus on theoritically understanding the
+  generalization of deep learning and applying ML to climate-ocean and hurricane (typhoon) prediction problems.
+  I enjoyed making applications of AI and ML on climate, physical ocean, natural disasters, and so on.
+  <br><br>
+  I work on a number of cross-projects in climate change, physic ocean, and CS.
+  They usually involve coding in Python, Fortran and Pytorch. My detailed education and experience can be found
+  in <a href="https://www.linkedin.com/in/guoqing-jiang-780a5bb2/"> LinkedIn </a>.
+  <br><br>
 
-  View My <a href="https://www.linkedin.com/in/guoqing-jiang-780a5bb2/"> LinkedIn </a> /
+  View My <a href="https://github.com/Ageliss"> GitHub </a> /
+  <a href="https://www.linkedin.com/in/guoqing-jiang-780a5bb2/"> LinkedIn </a> /
   <a href="https://scholar.google.com/citations?user=kCBHjI4AAAAJ&hl=en"> Google Scholar </a> /
   <a href="https://www.researchgate.net/profile/Guo_Qing_Jiang"> Research Gate </a>
   
