--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Guo-qing Jiang # your name (or website title) here
 logo: "figures/avatar.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am currently a Assistant Research Scientist at Chinese Meteorology Bureau. Before that,
-  I was a <a href="https://www.kuaishou.com/">KUAI</a> Tec. AI Algorithm Engineer working on understanding deep learning,
+  I was a <a href="https://www.kuaishou.com/">KUAI Tec.</a> AI Algorithm Engineer working on understanding deep learning,
   face locallization, etc...
   <br><br>
 
