--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "figures/avatar.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am currently a Assistant Research Scientist at Chinese Meteorology Bureau. Before that,
   I was a <a href="https://www.kuaishou.com/">KUAI Tec.</a> AI Algorithm Engineer working on understanding deep learning,
-  face locallization, etc... Contact me: jianggq@pku.edu.cn
+  face locallization, etc... Contact me: <a href="jianggq@pku.edu.cn"> jianggq@pku.edu.cn </a>
   <br><br>
 
   View My <a href="https://github.com/Ageliss"> GitHub </a> /
